# tgautils

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  ReadMe.md
.github/workflows/: cmake.yml
cmake/: set_c_standard.cmake
config/: CMakeLists.txt  string_case_compare.manual.c.in  string_case_compare.string.c.in  string_case_compare.strings.c.in
config/include/config/: string_case_compare.h
docs/: tgautils.txt
images/: CMakeLists.txt  CompareDumpOutput.cmake  cbw8.txt  ccm8.txt  ctc16.txt  ctc24.txt  ctc32.txt  ubw8.txt  ucm8.txt  utc16.txt  utc24.txt  utc32.txt
libs/: CMakeLists.txt  read.c  write.c
libs/include/: tga.h
tools/: CMakeLists.txt  tgadump.c  tgaedit.c  tgapack.c  tstamp.c  vstamp.c
